--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,7 @@
+html, body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 #page-wrap > div:first-child {
   position: absolute;
   height: 100%;
